<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mohitpaudel.braintrainerapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/relativeFirst">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_go"
        android:id="@+id/btnStart"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#9a1717"
        android:onClick="startGame"
        android:padding="20dip"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeSecond">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:columnCount="2"
            android:rowCount="2"
            android:id="@+id/gridLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_btn0"
                android:textSize="80sp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:id="@+id/button0"
                android:layout_row="0"
                android:layout_column="0"
                android:tag="0"
                android:onClick="randomButton"
                android:background="@color/accent_material_dark"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_btn1"
                android:textSize="80sp"
                android:layout_column="1"
                android:layout_row="0"
                android:id="@+id/button1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:tag="1"
                android:onClick="randomButton"
                android:background="@color/accent_material_light"
                />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_btn3"
                android:textSize="80sp"
                android:layout_column="0"
                android:layout_row="1"
                android:id="@+id/button2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:tag="2"
                android:onClick="randomButton"
                android:background="@color/accent_material_light"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_btn2"
                android:textSize="80sp"
                android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/button3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:tag="3"
                android:onClick="randomButton"
                android:background="@color/accent_material_dark"
                />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/message"
            android:id="@+id/txtMessage"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/_Add"
            android:id="@+id/txtSum"
            android:textSize="45sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_time"
            android:id="@+id/txtTimer"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_score"
            android:id="@+id/txtScore"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:id="@+id/playAgainButton"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:onClick="playAgain" />
    </RelativeLayout>

</RelativeLayout>
